Added some examples

--- a/script-fu-tut.html
+++ b/script-fu-tut.html
@@ -20,6 +20,7 @@
       &nbsp;&nbsp;&nbsp;&nbsp;<a href="#r5sr">R5SR Compliance</a><br>
       <a href="#debug">Debugging</a><br>
       <a href="#cannotdo">Things you can't do in Script-Fu</a><br>
+      <a href="#examples">Examples</a><br>
       <a href="#references">References</a><br>
       <a href="#changelog">ChangeLog</a><br>
     </p>
@@ -654,6 +655,18 @@ ERROR: unbound variable (errobj opendir)</pre>
       gui-interfaces, but I don't know the status of this project and
       have never seen it in action.</p>
 
+    <h2><a name="examples">Examples</a></h2>
+
+    <p>It is always a good idea to have a look at foreign Script-Fu's
+    to learn. Script-Fu's can for example be found in the Gimp
+    directory <tt
+    class="file">/usr/share/gimp/1.1/scripts/</tt>. There are also
+    some links to other Script-Fu sites at the <a
+    href="http://www.gimp.org">Gimp</a> webpage. I have also uploaded
+    my Script-Fu's, you can find them <a href="scripts/">here</a>, but
+    be warned, most of them are not documented and some might not work
+    at all.</p>
+
     <h2><a name="references">References</a></h2>
     <ul>
       <li><a href="http://people.delphi.com/gjc/siod.html">SIOD</a></li>
@@ -677,6 +690,9 @@ ERROR: unbound variable (errobj opendir)</pre>
     <h2><a name="changelog">ChangeLog</a></h2>
     <pre>
     $Log: script-fu-tut.html,v $
+    Revision 1.6  2000/08/15 16:13:22  ingo
+    Added a describtion of SF-FILENAME
+
     Revision 1.5  2000/08/15 16:06:41  ingo
     * Some sentences about debugging with (print ...)
     * Moved the changelog to the bottom of the page
