--- a/script-fu-tut.html
+++ b/script-fu-tut.html
@@ -8,6 +8,8 @@
     
     <h1>Script-fu Tutorial</h1>
 
+    [<a href="http://www09.u-page.so-net.ne.jp/yd5/yositaka/project/trans/script-fu/script-fu-tut.html">Japanese Version</a>]
+
     <h2>Table of Content</h2>
     <p>
       <a href="#preface">Preface</a><br>
@@ -690,6 +692,9 @@ ERROR: unbound variable (errobj opendir)</pre>
     <h2><a name="changelog">ChangeLog</a></h2>
     <pre>
     $Log: script-fu-tut.html,v $
+    Revision 1.7  2000/08/15 23:57:21  ingo
+    Added some examples
+
     Revision 1.6  2000/08/15 16:13:22  ingo
     Added a describtion of SF-FILENAME
 
@@ -711,6 +716,6 @@ ERROR: unbound variable (errobj opendir)</pre>
       Documentation License</a>, Version 1.1 or any later version
       published by the Free Software Foundation.</p>
 
-    <small>Last updated: Mon Aug 14 20:57:00 2000</small>
+    <small>Last updated: $Date$</small>
   </body>
 </html>
