--- a/script-fu-tut.html
+++ b/script-fu-tut.html
@@ -9,6 +9,7 @@
     <h1>Script-fu Tutorial</h1>
 
     [<a href="http://www09.u-page.so-net.ne.jp/yd5/yositaka/project/trans/script-fu/script-fu-tut.html">Japanese Version</a>]
+    [<a href="http://amin.unice.fr/~titix/gimp/traduction/tuto.html">French Version</a>]
 
     <h2>Table of Content</h2>
     <p>
@@ -692,6 +693,9 @@ ERROR: unbound variable (errobj opendir)</pre>
     <h2><a name="changelog">ChangeLog</a></h2>
     <pre>
     $Log: script-fu-tut.html,v $
+    Revision 1.8  2001/01/24 21:13:26  ingo
+    Added link to japanese translation
+
     Revision 1.7  2000/08/15 23:57:21  ingo
     Added some examples
 
@@ -716,6 +720,6 @@ ERROR: unbound variable (errobj opendir)</pre>
       Documentation License</a>, Version 1.1 or any later version
       published by the Free Software Foundation.</p>
 
-    <small>Last updated: $Date$</small>
+    <small>Last updated: $Date: 2001/01/24 21:13:26 $</small>
   </body>
 </html>
