--- a/script-fu-tut.html
+++ b/script-fu-tut.html
@@ -8,6 +8,7 @@
     
     <h1>Script-fu Tutorial</h1>
 
+    Translations: 
     [<a href="http://www09.u-page.so-net.ne.jp/yd5/yositaka/project/trans/script-fu/script-fu-tut.html">Japanese Version</a>]
     [<a href="http://amin.unice.fr/~titix/gimp/traduction/tuto.html">French Version</a>]
 
@@ -693,6 +694,9 @@ ERROR: unbound variable (errobj opendir)</pre>
     <h2><a name="changelog">ChangeLog</a></h2>
     <pre>
     $Log: script-fu-tut.html,v $
+    Revision 1.9  2001/11/19 21:30:09  ingo
+    added french version link
+
     Revision 1.8  2001/01/24 21:13:26  ingo
     Added link to japanese translation
 
@@ -720,6 +724,6 @@ ERROR: unbound variable (errobj opendir)</pre>
       Documentation License</a>, Version 1.1 or any later version
       published by the Free Software Foundation.</p>
 
-    <small>Last updated: $Date: 2001/01/24 21:13:26 $</small>
+    <small>Last updated: $Date: 2001/11/19 21:30:09 $</small>
   </body>
 </html>
