--- a/script-fu-tut.html
+++ b/script-fu-tut.html
@@ -6,11 +6,11 @@
 
   <body BGCOLOR="white" TEXT="black">
     
-    <h1>Script-fu Tutorial</h1>
-
     Translations: 
     [<a href="http://www09.u-page.so-net.ne.jp/yd5/yositaka/project/trans/script-fu/script-fu-tut.html">Japanese Version</a>]
     [<a href="http://amin.unice.fr/~titix/gimp/traduction/tuto.html">French Version</a>]
+
+    <h1>Script-fu Tutorial</h1>
 
     <h2>Table of Content</h2>
     <p>
@@ -174,9 +174,9 @@
     <p>The next step is to add the layer newly created layer to the
       image, as described in the DB browser:</p>
 
-<pre class="console-output">=&gt; (gimp-display-new 3)
+<pre class="console-output">=&gt; (gimp-image-add-layer 3 21 -1)
 
-(4)</pre>
+()</pre>
 And now we can finally display our image:
 
 <pre class="console-output">=&gt; (gimp-display-new 3)
@@ -449,9 +449,9 @@ and than:
       font size.</p>
 
     <p>The creation of the <tt class="code">script-fu-register</tt> is
-      left as an exercise for the user. I you don't want to try it
+      left as an exercise for the user. If you don't want to try it
       yourself you can look some lines below for the finished
-      script. The resulting box might then lock like this:</p>
+      script. The resulting box might then look like this:</p>
 
     <!-- Insert image -->
 
@@ -694,6 +694,9 @@ ERROR: unbound variable (errobj opendir)</pre>
     <h2><a name="changelog">ChangeLog</a></h2>
     <pre>
     $Log: script-fu-tut.html,v $
+    Revision 1.10  2001/11/19 21:33:20  ingo
+    *** empty log message ***
+
     Revision 1.9  2001/11/19 21:30:09  ingo
     added french version link
 
@@ -724,6 +727,6 @@ ERROR: unbound variable (errobj opendir)</pre>
       Documentation License</a>, Version 1.1 or any later version
       published by the Free Software Foundation.</p>
 
-    <small>Last updated: $Date: 2001/11/19 21:30:09 $</small>
+    <small>Last updated: $Date: 2001/11/19 21:33:20 $</small>
   </body>
 </html>
