--- a/script-fu-tut.html
+++ b/script-fu-tut.html
@@ -694,6 +694,9 @@ ERROR: unbound variable (errobj opendir)</pre>
     <h2><a name="changelog">ChangeLog</a></h2>
     <pre>
     $Log: script-fu-tut.html,v $
+    Revision 1.12  2002/02/21 10:46:10  ingo
+    some spelling fixes
+
     Revision 1.11  2002/01/23 18:18:39  ingo
     applied OSHIRO Naoki's typo patch
 
@@ -730,6 +733,6 @@ ERROR: unbound variable (errobj opendir)</pre>
       Documentation License</a>, Version 1.1 or any later version
       published by the Free Software Foundation.</p>
 
-    <small>Last updated: $Date: 2002/01/23 18:18:39 $</small>
+    <small>Last updated: $Date: 2002/02/21 10:46:10 $</small>
   </body>
 </html>
