Synced content with http://www.seul.org/~grumbel/gimp/script-fu/script-fu-tut.html

--- a/script-fu-tut.html
+++ b/script-fu-tut.html
@@ -9,6 +9,7 @@
     Translations: 
     [<a href="http://www09.u-page.so-net.ne.jp/yd5/yositaka/project/trans/script-fu/script-fu-tut.html">Japanese Version</a>]
     [<a href="http://amin.unice.fr/~titix/gimp/traduction/tuto.html">French Version</a>]
+    [<a href="http://science.webhostinggeeks.com/Script-fu">Serbo-Croatian</a> language by Anja Skrba from <a href="http://webhostinggeeks.com/"> Webhostinggeeks.com</a>]
 
     <h1>Script-fu Tutorial</h1>
 
