Fixed some image links

--- a/script-fu-tut.fr.html
+++ b/script-fu-tut.fr.html
@@ -76,14 +76,14 @@ Pour commencer notre test, nous créons une image rgb et nous inscrivons
 en noir le mot "test" dans un calque transparent.
 </p>
 
-<img src='/web/20040206220101im_/http://pingus.seul.org/~grumbel/gimp/script-fu/images/step1.jpg'>
+<img src='images/step1.jpg'>
 
 <p>
 Maintenant on duplique le calque courant et on applique un gradient
 métal sur celui qui est le plus en avant.
 </p>
 
-<img src='/web/20040206220101im_/http://pingus.seul.org/~grumbel/gimp/script-fu/images/step2.jpg'>
+<img src='images/step2.jpg'>
 
 <p>
 Ensuite on sélectionne le 2ème calque et on l'élargit. Pour cela on
@@ -92,7 +92,7 @@ sélection. maintenant on remplit la sélection avec le même gradient mais
 dans une autre direction.
 </p>
 
-<img src='/web/20040206220101im_/http://pingus.seul.org/~grumbel/gimp/script-fu/images/step3.jpg'>
+<img src='images/step3.jpg'>
 
 <p>
 Pour finir on rassemble les calques et on applique une ombre portée
@@ -100,7 +100,7 @@ standard, et on applique un redimensionnement automatique pour éliminer
 les parties inutiles de l'image.
 </p>
 
-<img src='/web/20040206220101im_/http://pingus.seul.org/~grumbel/gimp/script-fu/images/step4.jpg'>
+<img src='images/step4.jpg'>
 
 <u><a name='etape'><h2>Reproduction des étapes dans la console Script-fu</h2></a></u>
 <!------------------------------------------------->
@@ -131,7 +131,7 @@ est de tester chaque ligne dans la console avant de l'inscrire dans le
 Script-fu si tout c'est passé comme désiré.
 </p>
 
-<img src='2001_09_12_010048_shot.png'>
+<img src='images/script-fu-console.png'>
 
 <p>
 Pour cela, ouvrez la console par 'Exts->Script-fu->console...'. Si la
@@ -142,7 +142,7 @@ Scripts-fu. A partir du nom de la fonction vous pouvez obtenir une
 description de son déroulement et les arguments attendus.
 </p>
 
-<img src='2001_09_12_010030_shot.png'>
+<img src='images/db-browser.png'>
 
 <p>
 Maintenant il est temps de reproduire la première étape qui est la
@@ -589,7 +589,7 @@ Le code suivant crée une boite avec tous les types d'entrées possibles.
 La boite résultante ressemblera à ça :
 </p>
 
-<img src='2001_09_12_011259_shot.png'>
+<img src='images/demo-box.png'>
 
 <p>
 Retournons à nos affaires, et finissons notre exemple de Script-fu.
