--- a/script-fu-tut.html
+++ b/script-fu-tut.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Script-Fu Tutorial</title>
 <!--    <LINK REL="stylesheet" HREF="default.css" TYPE="text/css">-->
   </head>
