--- a/script-fu-tut.html
+++ b/script-fu-tut.html
@@ -3,38 +3,53 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Script-Fu Tutorial</title>
-<!--    <LINK REL="stylesheet" HREF="default.css" TYPE="text/css">-->
+    <link rel="stylesheet" href="default.css" type="text/css">
   </head>
 
-  <body BGCOLOR="white" TEXT="black">
-
+  <body>
     Translations:
+    <ul>
     <!-- http://www09.u-page.so-net.ne.jp/yd5/yositaka/project/trans/script-fu/script-fu-tut.html -->
-    [<a href="script-fu-tut.jp.html">Japanese Version</a>]
+    <li><a href="script-fu-tut.jp.html">Japanese Version</a></li>
 
     <!-- http://amin.unice.fr/~titix/gimp/traduction/tuto.html -->
-    [<a href="script-fu-tut.fr.html">French Version</a>]
+    <li><a href="script-fu-tut.fr.html">French Version</a></li>
 
-    [<a href="http://science.webhostinggeeks.com/Script-fu">Serbo-Croatian</a> language by Anja Skrba from <a href="http://webhostinggeeks.com/"> Webhostinggeeks.com</a>]
+    <li><a href="http://science.webhostinggeeks.com/Script-fu">Serbo-Croatian</a> language by Anja Skrba from <a href="http://webhostinggeeks.com/"> Webhostinggeeks.com</a></li>
+
+    <li><a href="http://translate.coupofy.com/script-fu-seminar/">Slovak</a> by Ivanka from <a href="http://www.coupofy.com">Coupofy.com</a></li>
+    </ul>
+
+    <div class="warning">
+      <p>The following tutorial was written back in 2000 and newer
+        versions of Gimp might not fully support the examples given
+        here.</p>
+
+      <p>Bug reports can be submitted to
+        the <a href="https://github.com/Grumbel/script-fu/issues">GitHub
+          issue tracker</a></p>
+    </div>
 
     <h1>Script-fu Tutorial</h1>
 
     <h2>Table of Content</h2>
-    <p>
-      <a href="#preface">Preface</a><br>
-      <a href="#intro">Introduction</a><br>
-      <a href="#first">First step on the road to a Script-Fu</a><br>
-      <a href="#repro">Reproducing the steps in the Script-Fu Console</a><br>
-      <a href="#write">Writing down the Script-Fu</a><br>
-      <a href="#pitfalls">Common Pitfalls</a><br>
-      &nbsp;&nbsp;&nbsp;&nbsp;<a href="#return">Return Values</a><br>
-      &nbsp;&nbsp;&nbsp;&nbsp;<a href="#r5sr">R5SR Compliance</a><br>
-      <a href="#debug">Debugging</a><br>
-      <a href="#cannotdo">Things you can't do in Script-Fu</a><br>
-      <a href="#examples">Examples</a><br>
-      <a href="#references">References</a><br>
-      <a href="#changelog">ChangeLog</a><br>
-    </p>
+    <ol class="toc">
+      <li><a href="#preface">Preface</a></li>
+      <li><a href="#intro">Introduction</a></li>
+      <li><a href="#first">First step on the road to a Script-Fu</a></li>
+      <li><a href="#repro">Reproducing the steps in the Script-Fu Console</a></li>
+      <li><a href="#write">Writing down the Script-Fu</a></li>
+      <li><a href="#pitfalls">Common Pitfalls</a></li>
+      <ol>
+        <li><a href="#return">Return Values</a></li>
+        <li><a href="#r5sr">R5SR Compliance</a></li>
+      </ol>
+      <li><a href="#debug">Debugging</a></li>
+      <li><a href="#cannotdo">Things you can't do in Script-Fu</a></li>
+      <li><a href="#examples">Examples</a></li>
+      <li><a href="#references">References</a></li>
+      <li><a href="#changelog">ChangeLog</a></li>
+    </ol>
 
     <h2><a name="preface">Preface</a></h2>
 
@@ -157,7 +172,7 @@
     </p>
 
     <pre class="console-output">ERROR: Procedural database execution failed:
-    (gimp_display_new 3)</pre>
+(gimp_display_new 3)</pre>
 
     <p>So, that's just another pitfall. Not all functions in Script-Fu,
       act the same as their counterparts in the menus. Sometimes
@@ -167,7 +182,7 @@
       image, we actually need at least one layer. So the next step is
       to create an layer:</p>
 
-<pre class="console-output">=&gt; (gimp-layer-new 3 256 256 RGB-IMAGE "foobar" 100 NORMAL-MODE)
+    <pre class="console-output">=&gt; (gimp-layer-new 3 256 256 RGB-IMAGE "foobar" 100 NORMAL-MODE)
 
 (21)</pre>
 
@@ -698,7 +713,7 @@ ERROR: unbound variable (errobj opendir)</pre>
       <li><a href="http://w3.man.torun.pl/~makler/help/script-fu-tutorial/">Mike Terry's Black Belt School of ScriptFu</a></li>
     </ul>
 
-    <hr>
+    <hr/>
 
     <P class="copyright">Copyright (c) 2000 Ingo Ruhnke &lt;<a
       href="mailto:grumbel@gmx.de">grumbel@gmx.de</a>&gt;</p>
