Fixed scripts/ link

--- a/script-fu-tut.html
+++ b/script-fu-tut.html
@@ -685,13 +685,13 @@ ERROR: unbound variable (errobj opendir)</pre>
 
     <p>It is always a good idea to have a look at foreign Script-Fu's
     to learn. Script-Fu's can for example be found in the Gimp
-    directory <span
-    class="file">/usr/share/gimp/1.1/scripts/</span>. There are also
-    some links to other Script-Fu sites at the <a
-    href="http://www.gimp.org">Gimp</a> webpage. I have also uploaded
-    my Script-Fu's, you can find them <a href="scripts/">here</a>, but
-    be warned, most of them are not documented, and some might not work
-    at all.</p>
+    directory <span class="file">/usr/share/gimp/1.1/scripts/</span>.
+    There are also some links to other Script-Fu sites at
+    the <a href="http://www.gimp.org">Gimp</a> webpage. I have also
+    uploaded my Script-Fu's, you can find
+    them <a href="https://github.com/Grumbel/script-fu/tree/master/scripts/">here</a>,
+    but be warned, most of them are not documented, and some might not
+    work at all.</p>
 
     <h2 id="references">References</h2>
     <ul>
