Changed license to CC-by-sa

--- a/script-fu-tut.html
+++ b/script-fu-tut.html
@@ -715,14 +715,12 @@ ERROR: unbound variable (errobj opendir)</pre>
 
     <hr/>
 
-    <P class="copyright">Copyright (c) 2000 Ingo Ruhnke &lt;<a
-      href="mailto:grumbel@gmx.de">grumbel@gmx.de</a>&gt;</p>
+    <P class="copyright">
+      Copyright (c) 2000 Ingo Ruhnke &lt;<a
+      href="mailto:grumbel@gmx.de">grumbel@gmail.com</a>&gt;<br/>
 
-    <p class="copyright">Permission is granted to copy, distribute and/or modify this
-      document under the terms of the <a
-      href="http://www.gnu.org/copyleft/fdl.html">GNU Free
-      Documentation License</a>, Version 1.1 or any later version
-      published by the Free Software Foundation.</p>
+      This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
+    </p>
 
     <small>Last updated: $Date: 2002/02/21 10:46:10 $</small>
   </body>
