License footer tweaking

--- a/script-fu-tut.html
+++ b/script-fu-tut.html
@@ -715,13 +715,15 @@ ERROR: unbound variable (errobj opendir)</pre>
 
     <hr/>
 
-    <P class="copyright">
-      Copyright (c) 2000 Ingo Ruhnke &lt;<a
-      href="mailto:grumbel@gmx.de">grumbel@gmail.com</a>&gt;<br/>
+    <div class="copyright">
+      <p>
+        Copyright (c) 2000 Ingo Ruhnke &lt;<a href="mailto:grumbel@gmx.de">grumbel@gmail.com</a>&gt;<br/>
 
-      This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
-    </p>
-
-    <small>Last updated: $Date: 2002/02/21 10:46:10 $</small>
+        This work is licensed under a <a rel="license"
+        href="http://creativecommons.org/licenses/by-sa/4.0/">Creative
+        Commons Attribution-ShareAlike 4.0 International
+          License</a>.<br/>
+      </p>
+    </div>
   </body>
 </html>
