--- a/script-fu-tut.html
+++ b/script-fu-tut.html
@@ -18,6 +18,8 @@
     <li><a href="http://science.webhostinggeeks.com/Script-fu">Serbo-Croatian</a> language by Anja Skrba from <a href="http://webhostinggeeks.com/"> Webhostinggeeks.com</a></li>
 
     <li><a href="http://translate.coupofy.com/script-fu-seminar/">Slovak</a> by Ivanka from <a href="http://www.coupofy.com">Coupofy.com</a></li>
+
+    <li><a href="http://besthcgdropswebsite.com/translate/tutorial-script-fu/">Italian Translation</a> by <a href="http://besthcgdropswebsite.com/">Gracy Laura</a>
     </ul>
 
     <div class="warning">
